[workspace]
members = ["packages/*", "contracts/*"]
resolver = "2"

[profile.release.package.injective-cosmwasm]
codegen-units = 1
incremental = false

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true


[workspace.dependencies]
anyhow              = { version = "1.0.66" }
base64              = { version = "0.13.1" }
bincode             = { version = "1.3.3" }
chrono              = { version = "0.4.24" }
cosmrs              = { version = "0.9.0", features = [ "cosmwasm" ] }
cosmwasm-schema     = { version = "1.2.0" }
cosmwasm-std        = { version = "1.2.0", features = [ "abort", "iterator", "stargate" ] }
cosmwasm-storage    = { version = "1.2.0", features = [ "iterator" ] }
cosmwasm-vm         = { version = "1.2.0", features = [ "iterator" ] }
cw-multi-test       = { version = "0.16.2" }
cw-storage-plus     = { version = "0.15.1" }
cw-utils            = { version = "1.0.1" }
cw2                 = { version = "0.15.1" }
cw20                = { version = "0.15.0" }
cw20-base           = { version = "0.15.0", features = [ "library" ] }
enumset             = { version = "1.0.12", features = [ "serde" ] }
ethereum-types      = { version = "0.14.1" }
injective-test-tube = { git = "https://github.com/InjectiveLabs/test-tube", branch = "latest" }
json                = { version = "0.12.4" }
hex                 = { version = "0.4.3", features = [ "serde" ] }
osmosis-std-derive  = { version = "0.15.2" }
primitive-types     = { version = "0.12.2" }
prost               = { version = "0.11.9" }
prost-types         = {version = "0.11.1", default-features = false}
protobuf            = { version = "2.28.0", features = ["with-bytes"] }
rand                = { version = "0.4.6" }
schemars            = { version = "0.8.8", features = [ "enumset" ] }
secp256k1           = { versio = "0.6.2" , features = ["rand"]}
serde               = { version = "1.0.137", default-features = false, features = ["derive"] }
serde-cw-value      = { version = "0.7.0" }
serde_json          = { version = "1.0.96"}
serde-json-wasm     = { version = "0.4.1" }
serde_repr          = { version = "0.1" }
serde_test          = { version = "1.0.166" }
subtle-encoding     = { version = "0.5.1", features = ["bech32-preview"] }
thiserror           = { version = "1.0.31" }
tiny-keccak         = { version = "1.2.1" }

# packages
injective-cosmwasm  = { version = "0.2.16", path = "./packages/injective-cosmwasm" }
injective-math      = { version = "0.2.1", path = "./packages/injective-math" }
injective-protobuf  = { version = "0.2", path = "./packages/injective-protobuf" }
injective-std       = { version = "0.1.3" , path = "./packages/injective-std" }
injective-testing   = { version = "0.1.3" , path = "./packages/injective-testing" }


[patch.crates-io]
#cw-multi-test = { path = "../cw-multi-test" }
#cw-multi-test = { git = "https://github.com/InjectiveLabs/cw-multi-test.git", branch ="feature/custom_address_generator" }



# [dev-dependencies]
# cosmwasm-schema = { version = "1.2.0" }
# serde-json-wasm = { version = "0.4.1" }
# cw-multi-test   = { version = "0.16.2" }
