[workspace]
members  = [ "contracts/*", "packages/*" ]
resolver = "2"

[profile.release.package.injective-cosmwasm]
codegen-units = 1
incremental   = false

[profile.release]
codegen-units    = 1
debug            = false
debug-assertions = false
incremental      = false
lto              = true
opt-level        = 3
overflow-checks  = true
panic            = 'abort'
rpath            = false

[patch.crates-io]
# injective-cosmwasm = { path = "./packages/injective-cosmwasm" }
# injective-math     = { path = "./packages/injective-math" }
# injective-protobuf = { path = "./packages/injective-protobuf" }
# injective-std      = { path = "./packages/injective-std" }
# injective-testing  = { path = "./packages/injective-testing" }
