[package]
authors = [ "Markus Waas <markus@injectivelabs.org>" ]
edition = "2021"
name    = "atomic-order-example"
version = "0.2.0"

exclude = [
 # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
 "contract.wasm",
 "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = [ "cdylib", "rlib" ]

[features]
# use library feature to disable all instantiate/execute/query exports
library = [  ]

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/workspace-optimizer-arm64:0.12.11
"""

[dependencies]
cosmwasm-std       = { version = "2.1.0", features = [ "abort", "cosmwasm_1_2", "cosmwasm_1_3", "cosmwasm_1_4", "cosmwasm_2_0", "iterator", "stargate" ] }
cosmwasm-storage   = { version = "1.5.2", features = [ "iterator" ] }
cw-storage-plus    = { version = "2.0.0" }
cw-utils           = { version = "0.16.0" }
cw2                = { version = "0.16.0" }
injective-cosmwasm = { version = "0.2.24", path = "../../packages/injective-cosmwasm" }
injective-math     = { version = "0.3.0", path = "../../packages/injective-math" }
injective-protobuf = { version = "0.2.3", path = "../../packages/injective-protobuf" }
protobuf           = { version = "2.28.0", features = [ "with-bytes" ] }
schemars           = { version = "0.8.8", features = [ "enumset" ] }
serde              = { version = "1.0.137", default-features = false, features = [ "derive" ] }
thiserror          = { version = "1.0.31" }

[dev-dependencies]
cosmwasm-schema = { version = "1.5.0" }
cw-multi-test   = { version = "0.16.2" }
