[package]
name = "dummy"
version = "1.0.0"
authors = ["Bartek Tofel <tofel.b@gmail.com>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/workspace-optimizer-arm64:0.12.11
"""

[dependencies]
cosmwasm-std          = { workspace = true }
cw-storage-plus       = { workspace = true }
cw2                   = { workspace = true }
serde                 = { workspace = true }
schemars              = { workspace = true }
thiserror             = { workspace = true }
injective-cosmwasm    = { workspace = true }
