[package]
authors = [ "Markus Waas <markus@injectivelabs.org>" ]
edition = "2021"
name    = "dummy"
version = "1.1.0"

exclude = [
 # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
 "contract.wasm",
 "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = [ "cdylib", "rlib" ]

[features]
# use library feature to disable all instantiate/execute/query exports
library = [  ]

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/workspace-optimizer-arm64:0.12.11
"""

[dependencies]
cosmwasm-std       = { version = "2.1.0", features = [ "abort", "cosmwasm_1_2", "cosmwasm_1_3", "cosmwasm_1_4", "cosmwasm_2_0", "iterator", "stargate" ] }
cw-storage-plus    = { version = "2.0.0" }
cw2                = { version = "2.0.0" }
injective-cosmwasm = { version = "0.2.24" }
schemars           = "0.8.8"
serde              = { version = "1.0.136", default-features = false, features = [ "derive" ] }
thiserror          = { version = "1.0.30" }
