[package]
authors = [ "Markus Waas <markus@injectivelabs.org>" ]
edition = "2018"
name    = "injective-cosmwasm-mock"
version = "1.0.0"

exclude = [
 # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
 "contract.wasm",
 "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = [ "cdylib", "rlib" ]

[features]
# use library feature to disable all instantiate/execute/query exports
integration = [  ]
library     = [  ]

[dependencies]
cosmos-sdk-proto   = { version = "0.20.0", default-features = false }
cosmwasm-schema    = { version = "1.5.0" }
cosmwasm-std       = { version = "2.1.0", features = [ "abort", "cosmwasm_1_2", "cosmwasm_1_3", "cosmwasm_1_4", "cosmwasm_2_0", "iterator", "stargate" ] }
cw-storage-plus    = { version = "2.0.0" }
cw2                = { version = "0.16.0" }
injective-cosmwasm = { path = "../../packages/injective-cosmwasm" }
injective-math     = { path = "../../packages/injective-math" }
injective-protobuf = { path = "../../packages/injective-protobuf" }
injective-std      = { version = "0.1.5" }
prost              = { version = "0.12.4" }
protobuf           = { version = "3.3.0" }
schemars           = { version = "0.8.16" }
serde              = { version = "1.0.196", default-features = false, features = [ "derive" ] }
thiserror          = { version = "1.0.56" }

[dev-dependencies]
injective-std       = { version = "0.1.5" }
injective-test-tube = { git = "https://github.com/InjectiveLabs/test-tube.git", branch = "latest" }
injective-testing   = { version = "0.1.6" }
