[package]
authors = [ "Markus Waas <markus@injectivelabs.org>" ]
edition = "2018"
name    = "injective-cosmwasm-mock"
version = "1.0.0"

exclude = [
 # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
 "contract.wasm",
 "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = [ "cdylib", "rlib" ]

[features]
# use library feature to disable all instantiate/execute/query exports
integration = [  ]
library     = [  ]

[dependencies]
cosmos-sdk-proto   = { workspace = true }
cosmwasm-schema    = { workspace = true }
cosmwasm-std       = { workspace = true }
cw-storage-plus    = { workspace = true }
cw2                = { workspace = true }
injective-cosmwasm = { path = "../../packages/injective-cosmwasm" }
injective-math     = { path = "../../packages/injective-math" }
injective-std      = { path = "../../packages/injective-std" }
prost              = { workspace = true }
schemars           = { workspace = true }
serde              = { workspace = true }
thiserror          = { workspace = true }

[dev-dependencies]
injective-test-tube = { workspace = true }
injective-testing   = { path = "../../packages/injective-testing" }
