[package]
name = "maker"
version = "0.1.0"
authors = ["Albert Chon <albert@injectivelabs.org>"]
edition = "2018"

exclude = [
    # Those files are cosmwasm-opt artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["cranelift"]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces", "cosmwasm-vm/backtraces"]
cranelift = ["cosmwasm-vm/cranelift"]

[dependencies]
cw0 = "0.10.3"
cw20 = "0.13.1"
cw20-base = "0.13.1"
injective-cosmwasm = { path = "../../packages/injective-cosmwasm", version = "0.1.0"}
cosmwasm-std = { version = "1.0.0-beta7", features = ["iterator"] }
cosmwasm-storage = { version = "1.0.0-beta7", features = ["iterator"] }
schemars = "0.8.8"
serde = { version = "1.0.125", default-features = false, features = ["derive"] }
snafu = { version = "0.6.3" }
thiserror = { version = "1.0.23" }
chrono = "0.4"
serde-json-wasm = "0.3.2"
subtle-encoding = { version = "0.5.1", features = ["bech32-preview"] }
ethereum-types = "0.5.2"

[dev-dependencies]
injective-mocks = { path = "../../packages/mocks", version = "0.1.0" }
cosmwasm-vm = { version = "1.0.0-beta7", default-features = false, features = ["iterator"] }
cosmwasm-schema = { version = "1.0.0-beta7" }


[profile.release]
debug = true
