[package]
name = "ninja-gov"
version = "2.1.1"
authors = ["Albert Chon <albert@injectiveprotocol.com>"]
edition = "2018"
license = "Apache-2.0"
description = "A Goverance contract for Ninja Protocol - allows a user to create polls and vote"
repository = "https://github.com/InjectiveLabs/cw-injective"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]


[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cw20 = { version = "0.13.1" }
cosmwasm-std = { version = "1.0.0-beta7", features = ["iterator"] }
cosmwasm-storage = { version = "1.0.0-beta7", features = ["iterator"] }
ninja-protocol = { version = "2.1.1", path = "../../packages/ninja_protocol" }
schemars = "0.8.8"
serde = { version = "1.0.125", default-features = false, features = ["derive"] }
hex = "0.4"

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0-beta7" }
