[package]
name = "ninja-master"
version = "1.0.0"
authors = ["Markus Waas <markus@injectiveprotocol.com>"]
edition = "2018"
description = "A Master contract for Ninja Finance - hold all funds and create orders with separate subaccounts for each sub-contract"
license = "Apache-2.0"

exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cw20 = { version = "0.13.2" }
cw20-base = "0.13.2"
cosmwasm-std = { version = "1.0.0-beta10", features = ["iterator"] }
cosmwasm-storage = { version = "1.0.0-beta10", features = ["iterator"] }
cw-storage-plus = { version = "0.13.2" }
injective-cosmwasm = { path = "../../packages/injective-cosmwasm", version = "0.1.0" }
ninja-protocol = { version = "2.1.1", path = "../../packages/ninja_protocol" }
schemars = "0.8.8"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.30" }
subtle-encoding = { version = "0.5.1", features = ["bech32-preview"] }
ethereum-types = "0.5.2"

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0-beta10" }
