[package]
name = "ninja-staking"
version = "2.1.1"
authors = ["Albert Chon <albert@injectiveprotocol.com>"]
edition = "2018"
description = "A Staking contract for Ninja Finance - distribute rewards to stakers"
license = "Apache-2.0"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]


[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cw20 = { version = "0.13.2" }
cosmwasm-std = { version = "1.0.0-beta10", features = ["iterator"] }
cosmwasm-storage = { version = "1.0.0-beta10", features = ["iterator"] }
ninja-protocol = { version = "2.1.1", path = "../../packages/ninja_protocol" }
schemars = "0.8.8"
serde = { version = "1.0.136", default-features = false, features = ["derive"] }

[dev-dependencies]
injective-cosmwasm = { path = "../../packages/injective-cosmwasm", version = "0.1.0"}
cosmwasm-schema = { version = "1.0.0-beta10" }
